feat(venus): add LSP integration, kernel management, and polish improvements
Major Features:
- LSP Integration: Bundle rust-analyzer with auto-download, diagnostics rendering,
  hover tooltips, and auto-completion support
- Kernel Management: Add restart kernel and clear outputs functionality with
  custom confirmation dialogs in footer
- Widget Debouncing: Implement 50ms debounce for widget updates to prevent
  excessive WebSocket messages

Bug Fixes:
- Macro Hygiene: Replace glob imports with explicit imports to avoid symbol
  collisions with user code (venus_universe::*)
- LSP UI: Fix tooltip clipping with fixedOverflowWidgets option

UI/UX:
- Add Venus logo to README
- Add kernel management buttons to footer (Restart Kernel, Clear Outputs)
- Improve LSP error messages with user-friendly toast notifications

Technical:
- rust-analyzer version: 2025-12-29
- Auto-download from GitHub releases if not installed
- Process isolation for kernel restart (kill WorkerPool, spin up new one)
- Preserve source code on restart, clear all execution state

--- a/crates/venus-server/src/frontend/index.html
+++ b/crates/venus-server/src/frontend/index.html
@@ -95,6 +95,19 @@
                 <span id="execution-time"></span>
             </div>
             <div class="footer-right">
+                <button class="btn btn-text btn-sm" id="clear-outputs-btn" title="Clear all cell outputs">
+                    <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                    </svg>
+                    Clear Outputs
+                </button>
+                <button class="btn btn-text btn-sm" id="restart-kernel-btn" title="Restart kernel (clear all state)">
+                    <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"/>
+                    </svg>
+                    Restart Kernel
+                </button>
+                <span class="separator"></span>
                 <span class="keyboard-hint">Shift+Enter: Run All</span>
             </div>
         </footer>
